--- a/src/checkInternet/checkInternet.html
+++ b/src/checkInternet/checkInternet.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="Content-Security-Policy" content="img-src 'self';script-src 'self'">
   <meta http-equiv="X-Content-Security-Policy" content="img-src 'self';script-src 'self'">
-  <title>Registro</title>
+  <title>Dory</title>
   <!-- CSS-->
   <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/styles.css" />
@@ -54,19 +53,19 @@
     <div id="main">  
       <div class="container container--miestilo">
         <div class="search-container"  >
-          <div class="search-container__box">
-            <img class="search-container__image2" src="./img/problem_solving1.svg">
+          <div class="search-container__box" style="user-select: none;">
+            <img class="search-container__image2" draggable="false" src="./img/problem_solving1.svg">
             <div  id="extableciendoconexion" class="search-container__contenido">
               <h5>Cargando</h5>
                <div>
-                <img src="./img/loader2.svg">
+                <img draggable="false"  src="./img/loader2.svg">
                </div>
               </div>
             </div>
             <div id="intentandoconectar" class="search-container__contenido1">
               <h5>Intentando conectar, por favor espere</h5>
             <div>
-              <img src="./img/loader2.svg">
+              <img draggable="false" src="./img/loader2.svg">
             </div>
             </div>
             <div id="cargaSinExito" class="search-container__contenido1">
