--- a/src/checkInternet/checkInternet.html
+++ b/src/checkInternet/checkInternet.html
@@ -72,7 +72,7 @@
                     <h5>La conexión no tubo exito, por favor intentalo de nuevo</h5>
             </div>
             <div id="sinInternet" class="search-container__contenido1">
-                  <h5>Internet desconectado, por favor comprueba tus redes e intentalo de nuevo</h5>
+                  <h5>Internet desconectado, comprueba tus redes e intentalo de nuevo</h5>
             </div>
             <div id="botonActualizardiv"  class="search-container__contenido1" >
               <div type="button" id="botonActualizar" class="btn btn-primary btn--miclass">Actualizar</div>
